--- a/The_Python_Mega_Course/Website_with_Python_and_Flask/Templates/about.html
+++ b/The_Python_Mega_Course/Website_with_Python_and_Flask/Templates/about.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html>
-<body>
+{%extends "layout.html"%}
+{%block content%}
+<div class="about">
 	<h1>***** About *****</h1>
 	<p>This page is done using Python and Flask!</p>
-</body>
-
-</html>
+</div>
+{%endblock%}
