--- a/The_Python_Mega_Course/Website_with_Python_and_Flask/Templates/home.html
+++ b/The_Python_Mega_Course/Website_with_Python_and_Flask/Templates/home.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html>
-<body>
+
+{%extends "layout.html"%}
+{%block content%}
+<div class="home">
 	<h1>***** My Homepage *****</h1>
 	<p>This is my webpage!!!</p>
-</body>
-
-</html>
+</div>
+{%endblock%}
