--- a/The_Python_Mega_Course/Website_with_Python_and_Flask/Templates/layout.html
+++ b/The_Python_Mega_Course/Website_with_Python_and_Flask/Templates/layout.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>***** FLASK APP *****</title>
+	<link rel="stylesheet" href="{{url_for('static', filename='CSS/main.css')}}">
+</head>
 <body>
 	<header>
 		<div class="container">
-			<h1 class="log">MikaelBeat's APP</h1>
-			<strong><nav>
+			<h1 class="logo">MikaelBeat's APP</h1>
+			<strong>
+				<nav>
 					<ul class="menu">
-						<li><a href="{{ url_for('home')}}">Home</a>
-						<li><a href="{{ url_for('about')}}">About</a>
+						<li><a href="{{ url_for('home')}}">Home</a></li>
+						<li><a href="{{ url_for('about')}}">About</a></li>
 					</ul>
-				</nav> </strong>
+				</nav> 
+			</strong>
 		</div>
 	</header>
 	<div class="container">
